tests/should-fail/semantics/uninitialized-var.j
function x takes nothing returns integer
    local integer a
    return a
endfunction